# ias_perception_aux

./: README.md  stack.xml
cop/: .gitignore  Makefile  Marker33_reload.xml  cop.launch  cop_config.ini  icub_cop.launch  manifest.xml  pr2config.ini  pr2cop.launch  remote_cop_config.ini  transparent_obj_cop_config.ini
cop_barcode_plugins/: CMakeLists.txt  manifest.xml  plugins.xml
cop_barcode_plugins/src/: FindBarCode.cpp
cop_bvw_class/: .gitignore  CMakeLists.txt  Makefile  bla.xml  cop_test_bvw.xml  cop_test_bvw.xml~  debug_cop.launch  manifest.xml  plugins.xml  recognosco.db
cop_bvw_class/include/: PVWObjectClassification.h
cop_bvw_class/src/: PVWObjectClassification.cpp
cop_cad_plugins/: CMakeLists.txt  mainpage.dox  manifest.xml  plugins.xml
cop_cad_plugins/include/: ColorModelFromCAD.h  DxfReader.h  DxfWriter.h  PRAShapeVsPointDescr.h  RFAColorByShape.h  RFAPointDescrByShape.h  RFASurfaceByCov.h  RFASurfaceByShape.h  ShapeBased3D.h  ShapeModel.h  ShapeModelDownloader.h  SurfaceDetection.h
cop_cad_plugins/src/: ColorModelFromCAD.cpp  DxfReader.cpp  PRAShapeVsPointDescr.cpp  PlugInRegister.cpp  RFAColorByShape.cpp  RFAPointDescrByShape.cpp  RFASurfaceByCov.cpp  RFASurfaceByShape.cpp  ShapeBased3D.cpp  ShapeModel.cpp  ShapeModelDownloader.cpp  SurfaceDetection.cpp  dxfwriter.cpp
cop_halcon_plugins/: CMakeLists.txt  manifest.xml  plugins.xml
cop_halcon_plugins/include/: Blob.h  BlobLocalizer.h  CalTab.h  Camera.h  CameraDriver.h  CheckColorClass.h  CircleDescriptor.h  ColorBased.h  ColorClass.h  ColorModel.h  DeformShapeBased.h  DeformShapeModel.h  DescriptorBased.h  DetectPlate.h  FindCalTab.h  HClusterDetector.h  HalconCalib.h  Image.h  IntersectTwoRuns.h  MeshProcessing.h  PanCakeDetector.h  PointDescrModel.h  RFAClassByDPs.h  RFADeformByCluster.h  ROIGenerator.h  ROSCamera.h  ROSROIListener.h  RegionOI.h  RelPoseHTuple.h  SearchParams3d.h  SimulatedCamera.h  SimulatedLocate.h  StereoSensor.h  SupportingPlaneDescriptor.h  SupportingPlaneDetector.h  TemplateBased.h  TexturedModel.h  TwoInOneAlg.h
cop_halcon_plugins/src/: Blob.cpp  BlobLocalizer.cpp  CalTab.cpp  Camera.cpp  CameraDriver.cpp  CheckColorClass.cpp  ClassifyObject.cpp  ColorBased.cpp  DeformShapeBased.cpp  DeformShapeModel.cpp  DescriptorBased.cpp  DetectPlate.cpp  FindCalTab.cpp  HClusterDetector.cpp  Image.cpp  IntersectTwoRuns.cpp  PanCakeDetector.cpp  PlugInRegister.cpp  PointDescrModel.cpp  RFAClassByDPs.cpp  RFADeformByCluster.cpp  ROIGenerator.cpp  ROSCamera.cpp  RegionOI.cpp  RelPoseHTuple.cpp  SearchParams3d.cpp  SimulatedCamera.cpp  SimulatedLocate.cpp  StereoSensor.cpp  SupportingPlaneDescriptor.cpp  SupportingPlaneDetector.cpp  TemplateBased.cpp  TexturedModel.cpp  TwoInOneAlg.cpp
cop_odu_plugin/: CMakeLists.txt  mainpage.dox  manifest.xml  plugins.xml  plugins.xml~
cop_odu_plugin/include/: cop_odu_plugin.h
cop_odu_plugin/src/: cop_odu_plugin.cpp
cop_tool_plugins/: CMakeLists.txt  manifest.xml  plugins.xml
cop_tool_plugins/src/: FindLines.cpp  FindPlanes.cpp  find_lines.cpp
cop_transparent_objects_plugin/: CMakeLists.txt  manifest.xml  plugins.xml
cop_transparent_objects_plugin/include/: DetectTransparentObject.h  DetectTransparentObjectCandidate.h  TransparentObject.h  TransparentObjectCandidate.h
cop_transparent_objects_plugin/include/icp/: icp.h  kdtree_common.cc  kdtree_common.h
cop_transparent_objects_plugin/src/: DetectTransparentObject.cpp  DetectTransparentObjectCandidate.cpp  PlugInRegister.cpp  TransparentObject.cpp  TransparentObjectCandidate.cpp
cop_transparent_objects_plugin/src/icp/: icpCpp.cpp
cop_weiszworscht_plugin/: CMakeLists.txt  mainpage.dox  manifest.xml  plugins.xml
cop_weiszworscht_plugin/include/: WWDetector.h
cop_weiszworscht_plugin/src/: PlugInRegister.cpp  WWDetector.cpp
dxflib/: .gitignore  .gitignore~  Makefile  manifest.xml
dxflib/.svn/: entries
dxflib/.svn/text-base/: Makefile.svn-base
dxflib/.svn/tmp/: tempfile.tmp
dxflib/dxflib-src/: configure  configure.in
dxflib/dxflib-src/autom4te.cache/: output.0  requests  traces.0
dxflib/dxflib-src/src/: dl_creationadapter.h  dl_creationinterface.h  dl_dxf.cpp
dxflib/dxflib-src/test/: main.cpp
dxflib/src/: dl_dxf.h~
dxflib/src/.svn/: entries
dxflib/src/.svn/text-base/: dl_entities.h.svn-base  dl_writer.h.svn-base
dxflib/src/.svn/tmp/: tempfile.2.tmp  tempfile.3.tmp  tempfile.5.tmp  tempfile.tmp
libwww/: .gitignore  Makefile  manifest.xml
